--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.20.3",
+    "@prismicio/next": "^2.0.1",
+    "@prismicio/react": "^3.2.2",
+    "clsx": "^2.1.1",
     "next": "15.5.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
@@ -16,12 +21,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@slicemachine/adapter-next": "^0.3.84",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
+    "slice-machine-ui": "^2.18.2",
     "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
